--- a/8puzzle.cabal
+++ b/8puzzle.cabal
@@ -1,13 +1,11 @@
 name:                8puzzle
 version:             0.1.0.0
--- synopsis:
--- description:
 homepage:            https://github.com/tempate/8puzzle#readme
-license:             BSD3
+license:             GPLv3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2021 Author name here
+author:              Daniel Díaz
+maintainer:          dani.diaz@mail.com
+copyright:           2021 Daniel Díaz
 category:            Web
 build-type:          Simple
 cabal-version:       >=1.10
@@ -19,3 +17,7 @@ executable 8puzzle
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5,
                        QuickCheck
+  other-modules: Board
+                 Move
+                 Search
+                 Tests
