--- a/8puzzle.cabal
+++ b/8puzzle.cabal
@@ -11,13 +11,21 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
-executable 8puzzle
-  hs-source-dirs:      src
-  main-is:             Main.hs
-  default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5,
-                       QuickCheck
-  other-modules: Board
-                 Move
-                 Search
-                 Tests
+Library
+  hs-source-dirs:     src
+  exposed-modules:    Board
+                      Move
+                      Search
+  build-depends:      base,
+                      QuickCheck
+
+Test-Suite 8puzzle-tests
+  type:               exitcode-stdio-1.0
+  main-is:            Main.hs
+  hs-source-dirs:     test
+  build-depends:      8puzzle,
+                      base,
+                      QuickCheck
+  other-modules:      Main
+                      Tests
+      
